replaced hyphen with U+2011 Unicode non-breaking hyphen on aboutme.html to prevent wrapping of year ranges

--- a/css/style.css
+++ b/css/style.css
@@ -1397,10 +1397,6 @@ transition-timing-function: ease; */
     gap: 4rem;
 }
 
-th.year {
-    hyphens: none;
-}
-
 
 /* END SPECIFIC ABOUT ME STYLES */
 
